--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">LastFmSearch</string>
+    <string name="app_name">LastFm</string>
+    <string name="search_string">Search Artists</string>
+    <string name="artistNameLabel">Name: </string>
+    <string name="artistUrlLabel">Url: </string>
+    <string name="artistListenersLabel">Listeners: </string>
 </resources>
